--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="uscupstate.edu.myquiz"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -22,10 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".CheatActivity"-->
-            <!--android:label="@string/app_name">-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".CheatActivity" -->
+        <!-- android:label="@string/app_name"> -->
+        <!-- </activity> -->
+        <activity
+            android:name=".CheatActivity"
+            android:label="@string/title_activity_cheat" >
+        </activity>
     </application>
 
 </manifest>
